--- a/recotech-frontend-master/tsconfig.json
+++ b/recotech-frontend-master/tsconfig.json
@@ -15,6 +15,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "outDir": "./dist",         // Output directory for compiled files
+    "rootDir": "./src",   
     "paths": {
       "@/*": ["./src/*"]
     }
